fix: use container spacing for resource page

--- a/apps/site/src/views/Resources/sections/ApiResources/ApiResources.module.scss
+++ b/apps/site/src/views/Resources/sections/ApiResources/ApiResources.module.scss
@@ -17,7 +17,6 @@
 	background-position: center;
 	background-size: 100% 100%;
 	height: 343px;
-	width: 80vw;
 	position: relative;
 	display: flex;
 	justify-content: center;
